--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,8 @@ twig:
     strict_variables: '%kernel.debug%'
     form_themes:
         - bootstrap_3_layout.html.twig
+    globals:
+        webSiteName: Task Planner
 
 # Doctrine Configuration
 doctrine:
